--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <!-- HERO (warm colorful gradient) -->
     <section class="relative">
       <div
-        class="absolute inset-0 -z-10 bg-[radial-gradient(1000px_500px_at_10%_10%,#7154b8,transparent_50%),radial-gradient(800px_480px_at_90%_15%,#419e85,transparent_55%),linear-gradient(180deg,#ffffff_0%,#f8fafc_100%)]"
+        class="absolute inset-0 -z-10 bg-[radial-gradient(1000px_500px_at_10%_10%,#c43d3d,transparent_50%),radial-gradient(800px_480px_at_90%_15%,#c43d3d,transparent_55%),linear-gradient(180deg,#ffffff_0%,#f8fafc_100%)]"
       ></div>
       <div
         class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-16 lg:py-24 grid lg:grid-cols-2 gap-12 items-center"
@@ -357,7 +357,7 @@
           <!-- Visual -->
           <div data-aos="fade-right" class="order-2 lg:order-1">
             <img
-              src="https://images.unsplash.com/photo-1543286386-713bdd548da4?q=80&w=1600&auto=format&fit=crop"
+              src="./images/logo.jpg"
               alt="Growth"
               class="w-full rounded-2xl shadow-soft"
             />
@@ -598,7 +598,7 @@
     <section id="contact" class="py-16 lg:py-24">
       <div class="relative mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div
-          class="absolute inset-0 -z-10 rounded-3xl bg-[linear-gradient(135deg,#1e1b4b_0%,#0f766e_100%)]"
+          class="absolute inset-0 -z-10 rounded-3xl bg-[linear-gradient(135deg,#7a2323_0%,#0f766e_100%)]"
         ></div>
         <div
           class="relative rounded-3xl p-10 sm:p-14 text-white overflow-hidden"
