--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
               >Contact</a
             >
             <a
-              href="#donate"
+              href="https://www.dextools.io/app/en/solana/pair-explorer/Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump?t=1759251868620"
               class="inline-flex items-center rounded-full bg-indigo-500 px-4 py-2 text-sm font-semibold text-white shadow-soft hover:shadow focus:outline-none focus:ring-2 focus:ring-brand.indigo/40 hover:bg-indigo-600 transition"
-              >Donate</a
+              >CHART</a
             >
           </nav>
 
@@ -173,9 +173,9 @@
             >Contact</a
           >
           <a
-            href="#donate"
+            href="https://www.dextools.io/app/en/solana/pair-explorer/Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump?t=1759251868620"
             class="block px-4 py-2 text-center rounded-full bg-indigo-500 text-white font-semibold hover:bg-indigo-600 transition"
-            >Donate</a
+            >CHART</a
           >
         </div>
       </div>
@@ -211,20 +211,20 @@
           </p>
           <div class="mt-8 flex flex-wrap gap-3" id="donate">
             <a
-              href="#donations"
+              href="https://www.dextools.io/app/en/solana/pair-explorer/Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump?t=1759251868620"
               class="inline-flex items-center rounded-full bg-indigo-500 px-6 py-3 text-sm font-semibold text-white shadow-glow hover:shadow focus:ring-2 focus:ring-brand.indigo/40 transition"
-              >See Impact</a
+              >View Chart</a
             >
             <a
-              href="#tokenomics"
+              href="https://pump.fun/coin/Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump"
               class="inline-flex items-center rounded-full bg-white/80 ring-1 ring-slate-200 px-6 py-3 text-sm font-semibold hover:ring-brand.indigo/60 hover:text-indigo-500 transition"
-              >Our Token</a
+              >Buy Now</a
             >
-            <a
+            <!-- <a
               href="#about"
               class="inline-flex items-center rounded-full bg-white px-6 py-3 text-sm font-semibold ring-1 ring-slate-200 hover:ring-slate-300 hover:shadow transition"
               >How We Work</a
-            >
+            > -->
           </div>
         </div>
         <div data-aos="fade-left" class="relative">
@@ -325,6 +325,11 @@
               class="inline-flex items-center rounded-full bg-teal-500 px-6 py-3 text-sm font-semibold text-white shadow-soft hover:shadow-md hover:bg-teal-600 transition"
               >Join Community</a
             >
+            <a
+              href="ttlink"
+              class="inline-flex items-center rounded-full bg-teal-500 px-6 py-3 text-sm font-semibold text-white shadow-soft hover:shadow-md hover:bg-teal-600 transition"
+              >Follow on X</a
+            >
           </div>
         </div>
       </div>
@@ -348,7 +353,7 @@
             CONTACT ADDRESS
             <br />
             <span class="font-semibold text-xl">
-              XXXXXXXXXXXXXXXXXXXXXXXXXXXXX</span
+              Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump</span
             >
           </p>
         </div>
@@ -757,15 +762,15 @@
             <h4 class="font-semibold">Useful Links</h4>
             <ul class="mt-3 space-y-2 text-sm text-indigo-100/90">
               <li>
-                <a class="hover:text-amber-300" href="buylink">Buy Now</a>
+                <a class="hover:text-amber-300" href="https://pump.fun/coin/Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump">Buy Now</a>
               </li>
               <li>
-                <a class="hover:text-amber-300" href="www.dextools.io"
+                <a class="hover:text-amber-300" href="https://www.dextools.io/app/en/solana/pair-explorer/Fvbwx3pEPMhrbEm5E7hJGGh56Nd42ceyXTEYwYGRpump?t=1759251868620"
                   >Dextools</a
                 >
               </li>
               <li>
-                <a class="hover:text-amber-300" href="www.dexscreener.com">Dexscreener</a>
+                <a class="hover:text-amber-300" href="https://dexscreener.com/solana/ccfrmuon8dkyh6mppkjh4cm8w2tspbvhurnffv64kz6r">Dexscreener</a>
               </li>
             </ul>
           </div>
