--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               >Join Community</a
             >
             <a
-              href="ttlink"
+              href="https://x.com/Hope500solana"
               class="inline-flex items-center rounded-full bg-teal-500 px-6 py-3 text-sm font-semibold text-white shadow-soft hover:shadow-md hover:bg-teal-600 transition"
               >Follow on X</a
             >
